# hf-mcp9700-driver

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  version_selector.html
_config/: Doxyfile  _config.yml  lychee.toml
_config/doxygen-extensions/: README.md
cmake/: hf_mcp9700_build_settings.cmake
development/: feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/api/: annotated.html  classhf_1_1mcp9700_1_1Mcp9700Thermistor-members.html  dir_000002_000004.html  dir_000005_000004.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74be4f6a8c360206df72b1bb4057fb39.html  dir_74be4f6a8c360206df72b1bb4057fb39_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_f46cd41eb4a5f8f512a8bb7240fc104c_dep.map  doxygen_crawl.html  index.html  index_8md.html  mcp9700__esp32c6__example_8cpp.js  mcp9700__thermistor_8hpp.html  mcp9700__thermistor_8hpp__dep__incl.md5  mcp9700__thermistor_8ipp.html  mcp9700__thermistor_8ipp__dep__incl.md5  md_docs_2api__reference.html  md_docs_2cmake__integration.html  md_docs_2hardware__setup.html  md_docs_2index.html  md_docs_2installation.html  md_docs_2quickstart.html  md_docs_2transfer__function.html  namespacehf_1_1mcp9700.html  namespacehf_1_1mcp9700.js  namespaces.html  namespaces_dup.js  quickstart_8md.html
development/cmake/: hf_mcp9700Config.cmake.in
development/docs/: api_reference.html  cmake_integration.html  cmake_integration.md  examples.html  hardware_setup.html  hardware_setup.md  index.html  installation.html  quickstart.html  troubleshooting.html
docs/: api_reference.md  cmake_integration.md  examples.md  hardware_setup.md  index.md  installation.md  quickstart.md  transfer_function.md  troubleshooting.md
docs/datasheet/: README.md
doxs/development/: README_8md.html  dir_74be4f6a8c360206df72b1bb4057fb39_dep.map  dir_bfccd401955b95cf8c75461437045ac0_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  docs_2datasheet_2README_8md.html  functions_func.html  index.html  mcp9700__thermistor_8hpp.js  mcp9700__thermistor_8hpp__incl.map  md_docs_2api__reference.html  md_docs_2examples.html  md_docs_2hardware__setup.html  (+7 more)
examples/esp32/components/hf_mcp9700/: CMakeLists.txt
inc/: mcp9700_thermistor.hpp  mcp9700_version.h.in
src/: mcp9700_thermistor.ipp
(+164 files in other folders)
